[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game Assets/Rooms/roomscript.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/Rooms/test/stairsplatform.gd" type="Script" id=2]
[ext_resource path="res://Game Assets/Rooms/roomtrigger.gd" type="Script" id=3]
[ext_resource path="res://Game Assets/Rooms/test/roomchecks.gd" type="Script" id=4]

[sub_resource type="NavigationMesh" id=30]
vertices = PoolVector3Array( -5, 1, -18.5, -3.5, 1.75, -18.5, -3.5, 1.75, -21.25, -5, 1, -21.25, -5.25, 0.75, -17.75, -5.25, 0.5, -22.25, -11.25, 0.5, -38.75, -20.5, 0.5, -38.75, -38.75, 0.5, -28.25, -38.75, 0.5, -17.75, -5.25, 0.75, -17.75, -5, 1, -18.5, -5, 1, -21.25, -5.25, 0.5, -22.25, -5.25, 0.5, -22.25, -2.5, 0.5, -22.5, -2.5, 0.5, -25, -20.5, 0.5, -38.75, -29.75, 0.5, -38.75, -38.75, 0.5, -28.25, -2.5, 0.5, -25, -2, 0.75, -25.25, -2, 0.5, -38.75, -29.75, 0.5, -38.75, -38.75, 0.5, -38.75, -38.75, 0.5, -28.25, -2.5, 0.5, -25, -2, 0.5, -38.75, -11.25, 0.5, -38.75, -5.25, 0.5, -22.25, -1.25, 1, -25, -1.25, 1.75, -23.5, 1.5, 1.75, -23.5, 1.5, 1, -25, -2, 0.75, -25.25, -1.25, 1, -25, 1.5, 1, -25, 2.25, 0.75, -25.25, 2.25, 0.5, -38.75, -2, 0.5, -38.75, 20.75, 1, -3.25, 23.25, 1, -3.25, 23.5, 1, -3.75, 5, 1, -21.25, 3.5, 1.75, -21.25, 3.5, 1.75, -18.5, 5, 1, -18.5, 23.5, 1, -3.75, 24.5, 0.5, -3.75, 39, 0.5, -11.5, 24.7917, 0.5, -4.39583, 20, 1, -3.75, 20.75, 1, -3.25, 23.5, 1, -3.75, 39, 0.5, -11.5, 21.3571, 0.5, -4.30357, 24.7917, 0.5, -4.39583, 5, 1, -21.25, 5, 1, -18.5, 5.25, 0.75, -17.75, 20.5, 0.5, -38.75, 11.25, 0.5, -38.75, 5.25, 0.5, -22.25, 2.75, 0.5, -25, 2.75, 0.5, -22.5, 5.25, 0.5, -22.25, 39, 0.5, -20.5, 39, 0.5, -29.75, 29.75, 0.5, -38.75, 39, 0.5, -29.75, 39, 0.5, -38.75, 29.75, 0.5, -38.75, 2.25, 0.5, -38.75, 2.25, 0.75, -25.25, 2.75, 0.5, -25, 24.5, 0.5, -3.75, 24.75, 0.5, -2, 39, 0.5, -2.25, 39, 0.5, -11.5, 11.25, 0.5, -38.75, 2.25, 0.5, -38.75, 2.75, 0.5, -25, 5.25, 0.5, -22.25, 20, 1, -3.75, 39, 0.5, -11.5, 39, 0.5, -20.5, 29.75, 0.5, -38.75, 20.5, 0.5, -38.75, 5.25, 0.75, -17.75, 18.9464, 0.5, -4.75, 21.3571, 0.5, -4.30357, -1.25, 2.5, -18, -1.25, 1.75, -16.5, 1.5, 1.75, -16.5, 1.5, 2.5, -18.25, 1.5, 2.5, -21.75, 1.5, 1.75, -23.5, -1.25, 1.75, -23.5, -1.25, 2.5, -21.75, 3.5, 1.75, -18.5, 3.5, 1.75, -21.25, 2, 2.5, -21.25, 1.5, 2.5, -18.25, -1.75, 2.5, -18.5, -1.25, 2.5, -18, 1.5, 2.5, -18.25, -3.5, 1.75, -21.25, -3.5, 1.75, -18.5, -1.75, 2.5, -18.5, -1.75, 2.5, -21.25, -1.75, 2.5, -18.5, 1.5, 2.5, -18.25, 2, 2.5, -21.25, 1.5, 2.5, -21.75, -1.25, 2.5, -21.75, -1.75, 2.5, -21.25, 1.5, 1, -15, 1.5, 1.75, -16.5, -1.25, 1.75, -16.5, -1.25, 1, -15, -9, 0.5, 39, -1.5, 0.5, 39, 19.5, 0.5, 25.75, 2.25, 0.75, -14.75, 1.5, 1, -15, -1.25, 1, -15, -2.25, 0.5, -14.75, 19.5, 0.5, 8.5, 19.5, 0.5, -3.25, -2.25, 0.5, -14.75, -2.5, 0.5, -17.25, -5, 0.5, -17.25, -16.5, 0.5, 39, -9, 0.5, 39, 19.5, 0.5, 25.75, 21, 0.5, 39, 21.25, 0.5, 30.75, 19.5, 0.5, 30.5, 13.5, 0.5, 39, -38.75, 0.5, 31.75, -38.75, 0.5, 39, -31.5, 0.5, 39, -38.75, 0.5, 3.25, -38.75, 0.5, 10.5, -16.5, 0.5, 39, 19.5, 0.5, 25.75, 19.5, 0.5, 8.5, -5, 0.5, -17.25, 13.5, 0.5, 39, 19.5, 0.5, 30.5, 19.5, 0.5, 25.75, 6, 0.5, 39, -38.75, 0.5, 24.75, -38.75, 0.5, 31.75, -31.5, 0.5, 39, 19.5, 0.5, 25.75, 21.5, 0.5, 25.5, 21.5, 0.5, 8.75, 19.5, 0.5, 8.5, -5, 0.5, -17.25, -38.75, 0.5, -3.75, -38.75, 0.5, 3.25, 19.5, 0.5, 8.5, -2.25, 0.5, -14.75, -5, 0.5, -17.25, -38.75, 0.5, 24.75, -31.5, 0.5, 39, -24, 0.5, 39, -38.75, 0.5, 17.5, -5, 0.5, -17.25, -5.25, 0.75, -17.75, -38.75, 0.5, -17.75, -38.75, 0.5, -10.75, -1.5, 0.5, 39, 6, 0.5, 39, 19.5, 0.5, 25.75, -5, 0.5, -17.25, -38.75, 0.5, -10.75, -38.75, 0.5, -3.75, -38.75, 0.5, 17.5, -24, 0.5, 39, -16.5, 0.5, 39, -38.75, 0.5, 10.5, 5, 0.5, -17.25, 2.75, 0.5, -17.25, 2.75, 0.5, -15, 19.5, 0.5, -3.25, 20, 1, -3.75, 5.25, 0.75, -17.75, 5, 0.5, -17.25, 19.5, 0.5, -3.25, 18.9464, 0.5, -4.75, 2.25, 0.75, -14.75, 19.5, 0.5, -3.25, 2.75, 0.5, -15, 23.25, 1, -3.25, 20.75, 1, -3.25, 20.75, 5.5, 7.5, 23.5, 5.5, 7.5, 23.4688, 5.5, 6.15625, 23.3438, 3.5, 0.78125, 20.75, 3.5, 0.78125, 20.75, 5.5, 6.15625, 24.75, 0.5, -2, 24.75, 0.5, 6.75, 39, 0.5, 7, 39, 0.5, -2.25, 20.75, 0.5, 0.75, 20.75, 0.5, 1.25, 23.25, 0.5, 1.25, 23.25, 0.5, 0.75, 20.75, 0.5, 2.5, 20.75, 0.5, 7.5, 23.5, 0.5, 7.5, 23.5, 0.5, 2.5, 39, 0.5, 7, 24.75, 0.5, 6.75, 24.75, 0.5, 8.25, 39, 0.5, 7, 24.75, 0.5, 8.25, 24.25, 0.5, 8.75, 39, 0.5, 16, 24.25, 0.5, 8.75, 21.5, 0.5, 8.75, 21.5, 0.5, 25.5, 24.25, 0.5, 25.5, 39, 0.5, 25.25, 39, 0.5, 16, 24.25, 0.5, 30.75, 21.25, 0.5, 30.75, 21, 0.5, 39, 24.75, 0.5, 30.25, 24.25, 0.5, 30.75, 21, 0.5, 39, 30, 0.5, 39, 39, 0.5, 25.25, 24.25, 0.5, 25.5, 24.75, 0.5, 25.75, 30, 0.5, 39, 39, 0.5, 39, 39, 0.5, 32, 24.75, 0.5, 25.75, 24.75, 0.5, 30.25, 30, 0.5, 39, 39, 0.5, 32, 39, 0.5, 25.25, 20.75, 0.5, 26.75, 20.75, 0.5, 29.5, 23.5, 0.5, 29.5, 23.5, 0.5, 26.75, 20.75, 5.5, 26.75, 20.75, 5.5, 29.5, 23.5, 5.5, 29.5, 23.5, 5.5, 26.75 )
polygons = [ PoolIntArray( 3, 2, 0 ), PoolIntArray( 0, 2, 1 ), PoolIntArray( 5, 4, 6 ), PoolIntArray( 6, 4, 7 ), PoolIntArray( 7, 4, 8 ), PoolIntArray( 8, 4, 9 ), PoolIntArray( 11, 10, 12 ), PoolIntArray( 12, 10, 13 ), PoolIntArray( 16, 15, 14 ), PoolIntArray( 19, 18, 17 ), PoolIntArray( 22, 21, 20 ), PoolIntArray( 25, 24, 23 ), PoolIntArray( 26, 29, 27 ), PoolIntArray( 27, 29, 28 ), PoolIntArray( 33, 32, 30 ), PoolIntArray( 30, 32, 31 ), PoolIntArray( 35, 34, 36 ), PoolIntArray( 36, 34, 37 ), PoolIntArray( 37, 34, 39 ), PoolIntArray( 37, 39, 38 ), PoolIntArray( 42, 41, 40 ), PoolIntArray( 46, 45, 43 ), PoolIntArray( 43, 45, 44 ), PoolIntArray( 47, 50, 48 ), PoolIntArray( 48, 50, 49 ), PoolIntArray( 51, 55, 52 ), PoolIntArray( 52, 55, 53 ), PoolIntArray( 53, 55, 56 ), PoolIntArray( 56, 55, 54 ), PoolIntArray( 58, 57, 59 ), PoolIntArray( 59, 57, 62 ), PoolIntArray( 59, 62, 61 ), PoolIntArray( 59, 61, 60 ), PoolIntArray( 65, 64, 63 ), PoolIntArray( 68, 67, 66 ), PoolIntArray( 71, 70, 69 ), PoolIntArray( 74, 73, 72 ), PoolIntArray( 76, 75, 77 ), PoolIntArray( 77, 75, 78 ), PoolIntArray( 81, 80, 82 ), PoolIntArray( 82, 80, 79 ), PoolIntArray( 83, 89, 90 ), PoolIntArray( 90, 89, 88 ), PoolIntArray( 90, 88, 84 ), PoolIntArray( 84, 88, 85 ), PoolIntArray( 85, 88, 87 ), PoolIntArray( 85, 87, 86 ), PoolIntArray( 92, 91, 93 ), PoolIntArray( 93, 91, 94 ), PoolIntArray( 98, 97, 95 ), PoolIntArray( 95, 97, 96 ), PoolIntArray( 100, 99, 101 ), PoolIntArray( 101, 99, 102 ), PoolIntArray( 105, 104, 103 ), PoolIntArray( 109, 108, 106 ), PoolIntArray( 106, 108, 107 ), PoolIntArray( 115, 114, 110 ), PoolIntArray( 110, 114, 113 ), PoolIntArray( 110, 113, 112 ), PoolIntArray( 110, 112, 111 ), PoolIntArray( 119, 118, 116 ), PoolIntArray( 116, 118, 117 ), PoolIntArray( 122, 121, 120 ), PoolIntArray( 124, 123, 125 ), PoolIntArray( 125, 123, 126 ), PoolIntArray( 126, 123, 128 ), PoolIntArray( 126, 128, 127 ), PoolIntArray( 129, 131, 130 ), PoolIntArray( 134, 133, 132 ), PoolIntArray( 136, 135, 137 ), PoolIntArray( 137, 135, 138 ), PoolIntArray( 141, 140, 139 ), PoolIntArray( 143, 142, 144 ), PoolIntArray( 144, 142, 147 ), PoolIntArray( 144, 147, 146 ), PoolIntArray( 144, 146, 145 ), PoolIntArray( 149, 148, 150 ), PoolIntArray( 150, 148, 151 ), PoolIntArray( 154, 153, 152 ), PoolIntArray( 156, 155, 157 ), PoolIntArray( 157, 155, 158 ), PoolIntArray( 161, 160, 159 ), PoolIntArray( 162, 164, 163 ), PoolIntArray( 166, 165, 167 ), PoolIntArray( 167, 165, 168 ), PoolIntArray( 170, 169, 171 ), PoolIntArray( 171, 169, 172 ), PoolIntArray( 175, 174, 173 ), PoolIntArray( 178, 177, 176 ), PoolIntArray( 180, 179, 181 ), PoolIntArray( 181, 179, 182 ), PoolIntArray( 184, 183, 185 ), PoolIntArray( 185, 183, 186 ), PoolIntArray( 187, 190, 191 ), PoolIntArray( 191, 190, 189 ), PoolIntArray( 191, 189, 188 ), PoolIntArray( 193, 192, 194 ), PoolIntArray( 198, 197, 199 ), PoolIntArray( 199, 197, 202 ), PoolIntArray( 199, 202, 200 ), PoolIntArray( 200, 202, 201 ), PoolIntArray( 200, 201, 195 ), PoolIntArray( 195, 201, 196 ), PoolIntArray( 203, 206, 204 ), PoolIntArray( 204, 206, 205 ), PoolIntArray( 210, 209, 207 ), PoolIntArray( 207, 209, 208 ), PoolIntArray( 214, 213, 211 ), PoolIntArray( 211, 213, 212 ), PoolIntArray( 217, 216, 215 ), PoolIntArray( 219, 218, 220 ), PoolIntArray( 220, 218, 221 ), PoolIntArray( 225, 224, 226 ), PoolIntArray( 226, 224, 227 ), PoolIntArray( 227, 224, 222 ), PoolIntArray( 222, 224, 223 ), PoolIntArray( 230, 229, 228 ), PoolIntArray( 232, 231, 233 ), PoolIntArray( 233, 231, 234 ), PoolIntArray( 237, 236, 235 ), PoolIntArray( 240, 239, 238 ), PoolIntArray( 242, 241, 243 ), PoolIntArray( 243, 241, 244 ), PoolIntArray( 244, 241, 245 ), PoolIntArray( 249, 248, 246 ), PoolIntArray( 246, 248, 247 ), PoolIntArray( 253, 252, 250 ), PoolIntArray( 250, 252, 251 ) ]
agent_height = 2.0
agent_max_climb = 0.5
filter_ledge_spans = true
filter_walkable_low_height_spans = true

[sub_resource type="PlaneMesh" id=31]
size = Vector2( 80, 80 )

[sub_resource type="SpatialMaterial" id=35]

[sub_resource type="CubeMesh" id=32]
material = SubResource( 35 )
size = Vector3( 4, 1, 4 )

[sub_resource type="BoxShape" id=33]
extents = Vector3( 2, 0.5, 2 )

[sub_resource type="Animation" id=34]
resource_name = "New Anim"
length = 8.0
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 22, 4.5, 10, 0, 0, 0, 1, 1, 1, 1, 1, 1, 22, 4.5, 10, 0, 0, 0, 1, 1, 1, 1, 4, 1, 22, 4.5, 24, 0, 0, 0, 1, 1, 1, 1, 5, 1, 22, 4.5, 24, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=37]
extents = Vector3( 38, 10, 38 )

[sub_resource type="BoxShape" id=38]

[node name="Room" type="Spatial" groups=["Persist", "Rooms"]]
script = ExtResource( 1 )

[node name="Enemies" type="Spatial" parent="."]

[node name="Navigation" type="Navigation" parent="."]
unique_name_in_owner = true

[node name="NavMesh" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 30 )

[node name="Platforms" type="CSGCombiner" parent="Navigation/NavMesh"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0 )
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="SmallRamp" type="CSGCombiner" parent="Navigation/NavMesh/Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="CSGBox" type="CSGBox" parent="Navigation/NavMesh/Platforms/SmallRamp"]
use_collision = true
collision_layer = 7
collision_mask = 7
height = 1.0

[node name="CSGPolygon" type="CSGPolygon" parent="Navigation/NavMesh/Platforms/SmallRamp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, 1 )
use_collision = true
polygon = PoolVector2Array( 0, -0.016, 0, 1, 2, 0 )
depth = 2.0

[node name="CSGPolygon2" type="CSGPolygon" parent="Navigation/NavMesh/Platforms/SmallRamp"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, -0.5, 1 )
use_collision = true
polygon = PoolVector2Array( 0, -0.016, 0, 1, 2, 0 )
depth = 2.0

[node name="CSGPolygon3" type="CSGPolygon" parent="Navigation/NavMesh/Platforms/SmallRamp"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, -0.5, -1 )
use_collision = true
polygon = PoolVector2Array( 0, -0.016, 0, 1, 2, 0 )
depth = 2.0

[node name="CSGPolygon4" type="CSGPolygon" parent="Navigation/NavMesh/Platforms/SmallRamp"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, -0.5, -1 )
use_collision = true
polygon = PoolVector2Array( 0, -0.016, 0, 1, 2, 0 )
depth = 2.0

[node name="Stairs" type="CSGCombiner" parent="Navigation/NavMesh/Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, 0 )

[node name="Rung4" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25 )
height = 1.0
depth = 0.5

[node name="Rung5" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0.25 )
height = 1.25
depth = 0.5

[node name="Rung6" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.749772 )
height = 1.5
depth = 0.5

[node name="Rung7" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 1.25 )
height = 1.75
depth = 0.5

[node name="Rung8" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1.75 )
depth = 0.5

[node name="Rung9" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.635, 2.25 )
height = 2.25
depth = 0.5

[node name="Rung1" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, -1.75 )
height = 0.25
depth = 0.5

[node name="Rung2" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, -1.25 )
height = 0.5
depth = 0.5

[node name="Rung3" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.125, -0.75 )
height = 0.75
depth = 0.5

[node name="Rung10" type="CSGBox" parent="Navigation/NavMesh/Platforms/Stairs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 3.25 )
height = 2.5
depth = 1.5

[node name="Pillar" type="CSGBox" parent="Navigation/NavMesh/Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0.5, 14 )
calculate_tangents = false
height = 3.0

[node name="Walls" type="Spatial" parent="Navigation/NavMesh"]

[node name="North Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/North Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/North Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="East Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/East Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/East Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="West Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/West Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/West Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="South Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/South Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/South Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="Floor" type="CSGMesh" parent="Navigation/NavMesh"]
use_collision = true
collision_layer = 7
collision_mask = 7
mesh = SubResource( 31 )

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -20 )
shadow_enabled = true

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 10, 15 )
light_bake_mode = 2
shadow_enabled = true
omni_range = 19.76

[node name="Highest Point" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 5, 6.5 )

[node name="Moving Platforms" type="Spatial" parent="."]

[node name="StairsPlatform" type="Spatial" parent="Moving Platforms"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 4.5, 15.3423 )
script = ExtResource( 2 )

[node name="RigidBody" type="RigidBody" parent="Moving Platforms/StairsPlatform"]
collision_layer = 7
collision_mask = 7
mode = 3

[node name="MeshInstance" type="MeshInstance" parent="Moving Platforms/StairsPlatform/RigidBody"]
cast_shadow = 2
mesh = SubResource( 32 )
skeleton = NodePath("")

[node name="CollisionShape" type="CollisionShape" parent="Moving Platforms/StairsPlatform/RigidBody"]
shape = SubResource( 33 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving Platforms/StairsPlatform"]
playback_process_mode = 0
"anims/New Anim" = SubResource( 34 )

[node name="Pickups" type="Spatial" parent="."]

[node name="RoomTrigger" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Trigger" type="Area" parent="RoomTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Collision" type="CollisionShape" parent="RoomTrigger/Trigger"]
shape = SubResource( 37 )

[node name="Center" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="RoomChecks" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 4 )

[node name="NCheck" type="Area" parent="RoomChecks"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomChecks/NCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 0 )
shape = SubResource( 38 )

[node name="ECheck" type="Area" parent="RoomChecks"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomChecks/ECheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 0 )
shape = SubResource( 38 )

[node name="SCheck" type="Area" parent="RoomChecks"]
transform = Transform( 1, 0, 8.28108e-06, 0, 1, 0, -8.28108e-06, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomChecks/SCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 0 )
shape = SubResource( 38 )

[node name="WCheck" type="Area" parent="RoomChecks"]
transform = Transform( 8.23737e-06, 0, -1, 0, 1, 0, 1, 0, 8.23737e-06, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomChecks/WCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 0 )
shape = SubResource( 38 )

[connection signal="body_entered" from="RoomTrigger/Trigger" to="RoomTrigger" method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="RoomChecks/NCheck" to="RoomChecks" method="_on_NCheck_body_entered"]
[connection signal="body_entered" from="RoomChecks/ECheck" to="RoomChecks" method="_on_ECheck_body_entered"]
[connection signal="body_entered" from="RoomChecks/SCheck" to="RoomChecks" method="_on_SCheck_body_entered"]
[connection signal="body_entered" from="RoomChecks/WCheck" to="RoomChecks" method="_on_WCheck_body_entered"]
